<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#00000000"
            android:src="@drawable/logout"/>

        <ImageButton
            android:id="@+id/homebtn"
            android:layout_marginLeft="300dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/home"
            android:background="#00000000"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/sourceLangSelector"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" />

        <ImageButton
            android:id="@+id/buttonSwitchLang"
            style="@style/IconOnlyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_compare_arrows_black_24dp"
            />

        <Spinner
            android:id="@+id/targetLangSelector"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/sourceLangSelector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sourceText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/source_text_hint" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">



        <ImageView
            android:id="@+id/clear_text"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_clear_black_24dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ToggleButton
            android:id="@+id/buttonSyncSource"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="#620786"
            android:textOff="@string/download_model"
            android:textOn="@string/delete_model"
            android:textSize="11sp"
            />

        <ToggleButton
            android:id="@+id/buttonSyncTarget"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="#620786"
            android:textOff="@string/download_model"
            android:textOn="@string/delete_model"
            android:textSize="11sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/downloadedModels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/downloaded_models_label"
        />

    <TextView
        android:id="@+id/targetText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:gravity="top"
        android:hint="@string/translated_text_hint"
        />


</LinearLayout>